--- a/wikipedia-page/index.html
+++ b/wikipedia-page/index.html
@@ -14,7 +14,7 @@
             <img id="imagen-indice" src="./img/índice.png" alt="Logo de Wikipedia">
             </div>
            
-            <ul>
+            <ul id="indice-izq">
                 <li>Portada</li>
                 <li>Portal de la comunidad</li>
                 <li>Actualidad</li>
@@ -95,18 +95,32 @@
                     </p>
 
                     <div id="indice">
-                        <p style="text-align: center;"><strong>Índice [ocultar]</strong></p>
-                        <ol>
-                            <li> Biografía</li>
-                                <li>sdsd</li>
-                            <li>Arresto y muerte</li>
-                            <li><em>El diario de Ana Frank</em></li>
-                            <li>Reconocimientos y honores</li>
-                            <li>Véase también</li>
-                            <li>Notas</li>
-                            <li>Referencias</li>
-                            <li>Enlaces Externos</li>
-                        </ol>
+                        <p style="text-align: center; margin-bottom: 0px;"><strong>Índice [ocultar]</strong></p>
+                        <ul id="indice-principal">
+                            <li > <span class="enumeracion">1</span> Biografía</li>
+                                <li class="nivel2"><span class="enumeracion">1.1</span> Infancia en Alemania</li>
+                                <li class="nivel2"><span class="enumeracion">1.2</span> Exilio en Ámsterdam</li>
+                                <li class="nivel2"><span class="enumeracion">1.3</span> El escondite en la casa trasera</li>
+                            <li > <span class="enumeracion">2</span> Arresto y muerte</li>
+                            <li > <span class="enumeracion">3</span> <em>El diario de Ana Frank</em></li>
+                                <li class="nivel2"><span class="enumeracion">3.1</span> Publicación del diario</li>
+                                <li class="nivel2"><span class="enumeracion">3.2</span> Elogio a Ana Frank y su diario</li>
+                                <li class="nivel2"><span class="enumeracion">3.3</span> Desafíos negacionistas y acciones legales</li>
+                            <li > <span class="enumeracion">4</span> Reconocimientos y honores</li>
+                                <li class="nivel2"><span class="enumeracion">4.1</span> Fundación Ana Frank y Casa de Ana Frank</li>
+                                <li class="nivel2"><span class="enumeracion">4.2</span> Dedicación de espacios públicos, equipamientos y estatuas </li>
+                                    <li class="nivel3"><span class="enumeracion">4.2.1</span> España </li>
+                                        <li class="nivel4"><span class="enumeracion">4.2.1.1</span> Barcelona: Plaza de Ana Frank </li>
+                            <li > <span class="enumeracion">5</span> Véase también</li>
+                                <li class="nivel2"><span class="enumeracion">5.1</span> Relacionados con el Holocausto y la Segunda Guerra Mundial </li>
+                                <li class="nivel2"><span class="enumeracion">5.2</span> Otros </li>
+                            <li > <span class="enumeracion">6</span> Notas</li>
+                            <li > <span class="enumeracion">7</span> Referencias</li>
+                                <li class="nivel2"><span class="enumeracion">7.1</span> Citas </li>
+                                <li class="nivel2"><span class="enumeracion">7.2</span> Bibliografía (<em>en inglés</em>)</li>
+                                <li class="nivel2"><span class="enumeracion">7.3</span> Bibliografía adicional </li>
+                            <li > <span class="enumeracion">8</span> Enlaces Externos</li>
+                        </ul>
                     </div>
 
                 </div>
