Complete the information table

--- a/wikipedia-page/index.html
+++ b/wikipedia-page/index.html
@@ -145,6 +145,10 @@
                         Basilea. Según el relato de su primo Bernhard, era una niña que no paraba de reír. 5​
                     </p>
 
+                    <p class="descripcion">
+                        El 13 de marzo de 1933, unas pocas semanas antes de la toma del poder por parte de Hitler, el NSDAP alcanzó la mayoría en las elecciones municipales de Fráncfort, e inmediatamente hubo manifestaciones antisemitas. Otto Frank se dio cuenta de los grandes problemas que se les venían encima. El mismo año, Edith se mudó con las niñas a Aquisgrán a casa de su madre. Al principio, Otto se quedó en Fráncfort, pero luego le ofrecieron montar en Ámsterdam una sucursal de Opekta, una empresa alemana, y él se fue a los Países Bajos a poner en marcha los negocios y preparar todo para la llegada de su familia. Los Frank perdieron allí su ciudadanía alemana por aplicación de la Ley sobre los ciudadanos del Reich. 
+                    </p>
+
                     <h3 class="subsubsection">Exilio en Ámsterdam</h3>
 
                 </div>
@@ -177,8 +181,117 @@
                                 (15 años)
                                 Bergen-Belsen (Alemania nazi)</td>
                         </tr>
-                        
-                      </table>
+                        <tr>
+                            <td class="campo"><strong>Causa de muerte</strong></td>
+                            <td>
+                                Tifus
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="campo"><strong>Sepultura</strong></td>
+                            <td>
+                                Bergen-Belsen
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="campo"><strong>Residencia</strong></td>
+                            <td>
+                                Fráncfort del Meno, Fráncfort del Meno y Bergen-Belsen
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="campo"><strong>Nacionalidad</strong></td>
+                            <td>
+                                Alemana (1929-1941), neerlandesa y sin nacionalidad (desde 1941)
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="campo"><strong>Religión</strong></td>
+                            <td>
+                                Judaísmo
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="campo"><strong>Lengua materna</strong></td>
+                            <td>
+                                Alemán
+                            </td>
+                        </tr>
+                    </table>
+
+                    <h5 id="subtitle">Características físicas</h5>
+
+                    <table>
+                        <tr>
+                            <td class="campo"><strong>Cabello</strong></td>
+                            <td>
+                                Castaño
+                            </td>
+                        </tr>
+                    </table>
+
+                    <h5 id="subtitle">Familia</h5>
+
+                    <table>
+                        <tr>
+                            <td class="campo"><strong>Padres</strong></td>
+                            <td>
+                                Otto Heinrich Frank
+                                Edith FrankCastaño
+                            </td>
+                        </tr>
+                    </table>
+
+                    <h5 id="subtitle">Educación</h5>
+
+                    <table>
+                        <tr>
+                            <td class="campo"><strong>Educada en</strong></td>
+                            <td>
+                                6th Montessori School Anne Frank
+                            </td>
+                        </tr>
+                    </table>
+
+                    <h5 id="subtitle">Información profesional</h5>
+
+                    <table>
+                        <tr>
+                            <td class="campo"><strong>Ocupación</strong></td>
+                            <td>
+                                Diarista, escritora de literatura infantil y escritora
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="campo"><strong>Años activa</strong></td>
+                            <td>
+                                desde 1942
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="campo"><strong>Obras notables</strong></td>
+                            <td>
+                                Diario de Ana Frank
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="campo"><strong>Firma</strong></td>
+                            <td>
+                                <img id="firma-svg" src="./img/firma.svg" alt="Firma de Ana Frank">
+                            </td>
+                        </tr>
+                    </table>
+
+                    <h5 id="subtitle">Web</h5>
+
+                    <table>
+                        <tr>
+                            <td class="campo"><strong>Sitio web</strong></td>
+                            <td>
+                                <a href="https://www.annefrank.org/" target="_blank">www.annefrank.org</a>
+                            </td>
+                        </tr>
+                    </table>
                 </div>
             </div>
 
