Add the first part of the biography

--- a/wikipedia-page/index.html
+++ b/wikipedia-page/index.html
@@ -73,7 +73,7 @@
                 <h1 id="title">Ana Frank</h1>
             </div>
 
-            <div id="content">
+            <div class="content">
                 <div>
                     <p class="descripcion">
                         Annelies Marie Frank, conocida en español como Ana Frank (Fráncfort del Meno, 
@@ -123,6 +123,30 @@
                         </ul>
                     </div>
 
+                    <div>
+                        <h2 class="subsection">Biografía</h2>
+                    </div>
+                    <h3 class="subsubsection">Infancia en Alemania</h3>
+                    <p class="descripcion">
+                        Annelies Marie Frank nació en Fráncfort del Meno (Hesse, Alemania), la segunda hija de Otto
+                        Heinrich Frank (1889-1980) y Edith Hollander (1900-1945), una familia de judíos alemanes. 
+                        La familia vivía en una comunidad asimilada de ciudadanos judíos y otros que no lo eran; los
+                        niños se criaban con amigos católicos, protestantes y judíos. Los Frank eran judíos reformistas
+                        (también llamados progresistas); mantenían muchas tradiciones de la fe judía, pero no se ceñían
+                        demasiado a los preceptos. De sus padres, la creyente era Edith. Otto, que había participado
+                        como teniente del Ejército alemán durante la Primera Guerra Mundial y ahora era empresario,
+                        se ocupaba más de las formación de sus dos hijas. Disponía de una amplia biblioteca privada
+                        y animaba a las chicas a leer. A Anne la comparaban continuamente con su hermana Margot, 
+                        tres años mayor que ella, y a quien se la tenía por bondadosa, ejemplar y discreta, mientras 
+                        que Anne tenía muchos intereses y era extrovertida e impulsiva; se sentía en desventaja frente
+                        a Margot. Antes de que la política antijudía de los nacionalsocialistas sembrara el desasosiego
+                        en su vida y acabará por destruirla por completo, Anne vivía en Fráncfort una vida plácida 
+                        con su familia y sus amigos. Tuvo ocasión de visitar a Alice Frank, su abuela paterna, en
+                        Basilea. Según el relato de su primo Bernhard, era una niña que no paraba de reír. 5​
+                    </p>
+
+                    <h3 class="subsubsection">Exilio en Ámsterdam</h3>
+
                 </div>
                 <div id="data-container">
                     <div id="data-title">
@@ -140,8 +164,7 @@
                         </tr>
                         <tr>
                             <td class="campo"><strong>Apodo</strong></td>
-                            <td>Ana
-                                Anne</td>
+                            <td>Ana, Anne</td>
                         </tr>
                         <tr>
                             <td class="campo"><strong>Nacimiento</strong></td>
@@ -156,6 +179,111 @@
                         </tr>
                         
                       </table>
+                </div>
+            </div>
+
+            <div class="content">
+                <div>
+                    <p class="descripcion">
+                        En 1934 la madre de Anne se trasladó con sus dos hijas a Ámsterdam, donde su marido Otto
+                        llevaba ya varios meses preparando sus negocios y la futura vida de su familia. Se fueron
+                        a vivir a un barrio nuevo al sur de la ciudad, Rivierenbuurt, donde ya se habían instalado
+                        numerosas familias judías procedentes de Alemania, que se sentían más seguras en los Países
+                        Bajos que en lo que era en realidad su patria.
+                    </p>
+                    <p class="descripcion">
+                        En el exilio, los padres continuaron preocupándose por la formación de sus hijas. Margot iba
+                        a una escuela pública y Anne a una Montessori, también pública. Margot tenía estupendos 
+                        resultados en matemáticas, y a Anne se le daba bien la lectura y la escritura. Una de sus 
+                        mejores amigas, Hannah Goslar, a quien llamaban Hanneli, contó posteriormente que Anne a 
+                        menudo escribía en secreto y no quería decir nada del contenido. Sus recuerdos dieron lugar
+                        a un libro de Alison Leslie Gold, publicado en 1998. 6​Otra amiga, Jacqueline van Maarsen,
+                        también relató algunos años después sus vivencias con Anne.7​ En el verano de 1935 y 1936
+                            Anne pasó unas vacaciones despreocupadas con su tía abuela en Suiza, y también hizo amistades
+                            allí.
+                    </p>
+                    <p class="descripcion">
+                        A partir de 1933, Otto Frank estuvo a cargo de la sucursal holandesa de la empresa alemana
+                        Opekta. En 1938 fundó junto con su amigo Hermann van Pels, un carnicero que también había
+                        huido con su familia judía, otra empresa dedicada a la venta de especias. Otto hacía grandes
+                        esfuerzos por asegurarse unos ingresos, pues fue testigo de cómo el banco de su padre, que
+                            ya había salido debilitado de la crisis económica mundial de 1929, fue expropiado por los
+                            nacionalsocialistas.
+                    </p>
+                    <p class="descripcion">
+                        En 1939 la abuela de Ana (madre de su madre Edith) se mudó a Ámsterdam con los Frank y se
+                        quedó con ellos hasta que falleció en 1942. Su familia se enteró, de primera mano, de la
+                        manera tan despiadada en que actuaban los nacionalsocialistas por el hermano de Edith, Walter
+                        Holländer, a quien detuvieron en la "noche de los cristales rotos" y llevaron al campo de
+                            concentración Sachsenhausen, antes de permitirle viajar a los Países Bajos con una autorización
+                            especial. Sin embargo, Otto Frank mantenía su optimismo, incluso tras enterarse de las
+                            sinagogas incendiadas. Calificó este suceso como un ataque de fiebre que haría entrar
+                            en razón a todos los participantes. Pero su esperanza se trocó en miedo cuando, en septiembre
+                                de 1939, el ataque a Polonia hizo estallar la Segunda Guerra Mundial.
+                    </p>
+                    <p class="descripcion">
+                        A los judíos exiliados les preocupaba la amenaza que el ansia de expansión de Hitler podía suponer
+                        para los Países Bajos, los cuales intentaban mantenerse neutrales. El 10 de mayo de 1940, la
+                        Wehrmacht alemana atacó y ocupó el país. Las tropas neerlandesas se rindieron y la Reina
+                        Guillermina huyó a Londres, donde se exilió. Enseguida quedó patente que a los judíos residentes
+                            en Holanda les esperaba el mismo destino que a los de los otros territorios ocupados. Otto y 
+                            Edith Frank vieron que ya no podían ocultarles a sus hijas la situación política. Hasta entonces,
+                            los padres habían intentado mantenerlas al margen y simular una cierta normalidad, pero ahora 
+                            Ana estaba hecha un lío. Su carácter combativo la solía llevar a no plegarse; estaba acostumbrada
+                            a imponer sus puntos de vista. Otto intentó varias veces que le concedieran asilo en Estados 
+                            Unidos o en Cuba, entre otros con la ayuda de su amigo Nathan Straus, quien tenía contactos 
+                            con la primera dama Eleanor Roosevelt, pero no tuvo éxito.8​
+                    </p>
+                    <p class="descripcion">
+                        Cada vez había más leyes "anti-judíos"; les quitaban sus derechos, se les excluía de la vida social
+                        y de todas las instituciones públicas. Para Ana, que coleccionaba con entusiasmo fotos de las estrellas
+                        de Hollywood, fue especialmente duro que le prohibieran ir al cine. Tuvo que ir a una escuela especial,
+                        el Liceo, lo cual supuso separarse de muchos amigos. Todos los judíos estaban obligados a acudir a 
+                        que los registraran; a ellos y después incluso a sus bicicletas. Cuando se les hizo llevar la cruz 
+                        judía, muchos neerlandeses se solidarizaron con ellos. Pero por otra parte se constituyó un partido 
+                        nacionalsocialista neerlandés. Para proteger a su empresa de las estrictas inspecciones a las que se 
+                        las sometía, Otto Frank le cedió la dirección, sobre el papel, a dos colaboradores suyos que eran 
+                        arios.
+                    </p>
+                    <p class="descripcion">
+                        Al cumplir trece años, el 12 de junio de 1942, Ana recibió de regalo un pequeño diario, un cuaderno 
+                        a cuadros rojos y blancos que ella le había señalado a su padre en un escaparate unos días antes. 
+                        Ese mismo día, Ana comenzó a hacer anotaciones en lengua neerlandesa, describiéndose a sí misma y 
+                        a su familia, así como su vida diaria en casa y en el colegio. 
+                    </p>
+
+                    <h3 class="subsubsection">El escondite en la casa trasera</h3>
+
+                    <p class="descripcion">
+                        Otto Frank había preparado un escondite en la parte trasera de la empresa, en el número 263 de Prinsengracht, como le había sugerido uno de sus colaboradores. El edificio principal cerca de la iglesia Westerkerk no llamaba la atención; era viejo y típico de ese barrio de Ámsterdam. La casa de atrás era una construcción de tres plantas unida a la fachada posterior del edificio principal. En el primer piso había dos habitaciones pequeñas con baño y WC, por encima una habitación grande y otra pequeña, y en esta última había una escalera de mano que llevaba a la buhardilla. En total eran unos 50 metros cuadrados. Delante de las oficinas había un pasillo, en el cual, oculta tras una estantería de libros, una puerta se abría hacia una escalera empinada que llevaba a la casa trasera.
+                    </p>
+                    <p class="descripcion">
+                        Otto Frank le había pedido ayuda, anteriormente, a su secretaria Miep Gies (de soltera, Hermine Santrouschitz). Si bien ella tenía que contar con ser castigada en caso de que fueran descubiertos los judíos escondidos, accedió y asumió una difícil responsabilidad. Junto con su marido Jan Gies, los colaboradores de Otto, Kugler y Kleiman, así como Bep Voskuijl, ayudó a los habitantes de la casa trasera.
+                    </p>
+                    <p class="descripcion">
+                        La situación de la familia Frank se tornó aguda cuando el 5 de julio de 1942 Margot Frank recibió una llamada de la "unidad central para emigración judía en Ámsterdam", que ordenaba su deportación a un campo de trabajo. Si Margot no hubiese acudido, habrían detenido a toda la familia. A raíz de la llamada, Otto Frank decidió trasladarse antes de lo previsto al escondite con su familia. Como los judíos no podían utilizar los transportes públicos, tuvieron que caminar varios kilómetros desde su casa hasta el refugio, portando cada uno todas las vestimentas que podía, dado que no debían correr el riesgo de ser vistos con equipajes. Al día siguiente, el 6 de julio, empezó para toda la familia una vida oculta, ya que parecía imposible huir de los Países Bajos, ahora ocupados. Helmut Silberberg, amigo de Ana, fue a visitarlos a su casa y se encontró con que ya no estaban. Para disimular, la familia había dejado desordenada su vivienda anterior, y habían abandonado un papel del que se podía deducir una huida repentina a Suiza. Una semana más tarde, la familia van Pels entró también en la casa trasera, como hizo después en noviembre de 1942 el dentista Fritz Pfeffer. Inicialmente, tenían la esperanza de recobrar la libertad al cabo de unas pocas semanas, pero pasaron más de dos años escondidos allí. Durante todo este tiempo no pudieron salir a la calle, y tenían que tener cuidado de no hacer ruidos que se pudieran oír desde fuera. El ambiente era tenso, y los refugiados vivían con miedo e incertidumbre, lo cual daba lugar a continuas tensiones. Los conflictos personales se hacían cada vez más visibles. A Ana le molestaba tener que compartir la habitación con Fritz Pfeffer, y ver su privacidad limitada. Ella a menudo discutía con su madre, cada vez más desesperada, lo cual chocaba con la manera de ser de la hija, y Otto intentaba que recuperaran la calma. Para Ana fue especialmente difícil pasar su adolescencia, época caracterizada por una actitud rebelde, encerrada con sus padres y obligada a adaptarse a ellos.
+                    </p>
+                    <p class="descripcion">
+                        Miep Gies no solo traía alimentos, sino también noticias de la guerra. A medio día, los ayudantes comían junto con los refugiados, y al final de la tarde, cuando los otros empleados de la empresa habían abandonado el edificio, Ana y los demás podían acudir a la casa principal, donde escuchaban la BBC. Las noticias eran preocupantes: el 17 de julio de 1942 salió el primer tren con destino al campo de concentración de Auschwitz, y se privó a los judíos de la nacionalidad.
+                    </p>
+                    <p class="descripcion">
+                        Ana leyó muchos libros durante este tiempo, que le sirvieron para mejorar su estilo y convertirse en una escritora autónoma. Su habilidad para la escritura fue aumentando, al igual que su confianza en sí misma como autora. Ella tenía sus dudas sobre si Otto realmente amaba a Edith; sospechaba que se había casado con ella por mera conveniencia. Ana, por su parte, comenzó a interesarse por Peter van Pels, un chico al que inicialmente había descrito como tímido y aburrido. Pero la relación terminó tras un episodio de pasión. Del diario también se desprende que Ana estaba al tanto de las deportaciones y del dinero que ofrecían de recompensa por delatar a judíos.
+                    </p>
+                    <p class="descripcion">
+                        En el escondite había ocho personas: sus padres, Otto y Edith Frank; ella y su hermana mayor Margot; Fritz Pfeffer, un dentista judío (al que Ana dio el nombre de Albert Dussel en su Diario), y la familia van Pels (identificada como van Daan en el Diario), formada por Hermann y Auguste van Pels, y el hijo de ambos, Peter. Durante aquellos años, Ana escribió su Diario, en el que quedaba constancia de su miedo a vivir escondida durante años, sus nacientes sentimientos hacia Peter, los conflictos con sus padres y su vocación de escritora. Pocos meses antes de ser descubiertos, empezó a reescribir su Diario con la idea de publicarlo tras la guerra.
+                    </p>
+                    <p class="descripcion">
+                        Ana, su familia y los acompañantes fueron arrestados por la Grüne Polizei ("policía verde") el 4 de agosto de 1944 y un mes después, el 2 de septiembre, toda la familia fue trasladada en tren de Westerbork (campo de concentración en el noreste de los Países Bajos) hacia Auschwitz, viaje que les llevó tres días. Mientras tanto, Miep Gies y Bep Voskuijl, dos de las personas que los habían protegido mientras estuvieron escondidos, encontraron y guardaron el Diario y otros papeles de Ana.
+                    </p>
+                    <p class="descripcion">
+                        Desde su captura, se creyó que la familia fue delatada por un colaborador de la Gestapo, mientras que otras investigaciones afirmaban que el descubrimiento de los ocupantes fue casual, ya que los agentes de las SS estaban investigando delitos de empleo ilegal en el edificio y que la persecución de judíos no era su objetivo.9​ En 2022 un equipo de investigadores internacionales, entre ellos el agente jubilado del FBI Vince Pankoke, llegó a la conclusión de que es muy probable que el notario judío Arnold van den Bergh fuese quien delatara el escondite de la familia Frank, en lo que habría sido un trato con los nazis a cambio de garantizar la seguridad de su propia familia, 10​11​ si bien algunos historiadores han puesto en duda esta teoría.12​
+                    </p>
+                    <p class="descripcion">
+                        Ana, Margot y Edith Frank, la familia van Pels y Fritz Pfeffer no sobrevivieron a los campos de concentración nazis (aunque Peter van Pels murió durante las marchas entre campos). Margot y Ana pasaron un mes en Auschwitz II-Birkenau y luego fueron enviadas a Bergen-Belsen, donde murieron de tifus en marzo de 1945, poco antes de la liberación. Solo Otto logró salir del Holocausto con vida.4​ Miep le dio el diario, que él editaría con el fin de publicarlo con el título Diario de Ana Frank, y que finalmente ha sido publicado en más de 70 idiomas.
+                    </p>
+                    <p class="descripcion">
+                        El Memorial en honor a Ana y Margot Frank está ubicado en el lugar donde se hallaba la fosa común correspondiente a la barraca donde murieron, en el campo de concentración de Bergen-Belsen. 
+                    </p>
                 </div>
             </div>
         </div>
