Add images and paragraphs in Biography

--- a/wikipedia-page/index.html
+++ b/wikipedia-page/index.html
@@ -397,6 +397,36 @@
                     <p class="descripcion">
                         El Memorial en honor a Ana y Margot Frank está ubicado en el lugar donde se hallaba la fosa común correspondiente a la barraca donde murieron, en el campo de concentración de Bergen-Belsen. 
                     </p>
+
+                    <div class="card tright">
+                        <div class="tinner">
+                            <img class="image" src="./img/Entrada_Escondite_Ana_Frank.jpg" alt="">
+                            <p class="caption">Entrada al escondite, detrás de una biblioteca</p>
+                        </div>
+                    </div>
+                    <div class="card tleft">
+                        <div class="tinner">
+                            <img src="./img/AnneFrankMerwedeplein.jpg" alt="" class="image">
+                            <p class="caption">El bloque de apartamentos en la Merwedeplein donde la familia Frank vivió desde 1934 hasta 1942.</p>
+                        </div>
+                    </div>
+                    <div class="card tright">
+                        <div class="tinner">
+                            <img class="image" src="./img/Judenstern_JMW.jpg" alt="">
+                            <p class="caption">Estrella de David del tipo que todo judío estaba obligado a portar durante la ocupación nazi.</p>
+                        </div>
+                    </div>
+                    <div class="card tright">
+                        <div class="tinner">
+                            <img class="image" src="./img/AnneFrankHouseAmsterdamtheNetherlands.jpg" alt="">
+                            <p class="caption">Fachada principal del edificio Opekta (izquierda), en la Prinsengracht. Las oficinas de Otto Frank se encontraban al frente del edificio y la achterhuis se encontraba detrás.</p>
+                        </div>
+                    </div>
+
+                    <p class="descripcion">Víctor Kugler (en ediciones antiguas nombrado como Kraler), Johannes Kleiman (Koophuis), Miep Gies y Elisabeth ''Bep'' Voskuijl eran los únicos empleados que sabían del escondite y, junto con Jan, el esposo de Gies, y Johannes Hendrik Voskuijl, el padre de Bep Voskuijl, eran quienes ayudaban a los Frank a sobrevivir durante su confinamiento. Ellos eran el único contacto entre el exterior y los ocupantes de la casa, y los mantenían informados de las noticias de la guerra y de los eventos políticos. Eran también los proveedores de todo lo necesario para la seguridad y supervivencia de la familia; el abastecimiento de comida resultaba cada vez más difícil a medida que el tiempo transcurría. Ana escribió sobre la dedicación y sobre los esfuerzos para levantarles el ánimo durante los momentos más peligrosos. Todos eran conscientes de que dar refugio a judíos se penaba en aquel momento con la muerte. </p>
+                    <p class="descripcion">A finales de julio, se les unió la familia Van Pels (Van Daan): Hermann, Auguste y Peter de 16 años, y más tarde, en noviembre, llegó Fritz Pfeffer (Albert Dussel), dentista y amigo de la familia. Ana escribió sobre lo bueno que era tener otras personas con quienes hablar, pero las tensiones rápidamente se presentaron en este grupo de personas que debían convivir confinados en este escondite. Luego de compartir su habitación con Pfeffer, Ana terminó por considerarlo insoportable, y se peleó con Auguste van Pels, a quien consideraba fuera de sus cabales. Su relación con su madre se hizo difícil también y Ana escribió que sentía tener poco en común con ella por ser su madre demasiado abstraída. Algunas veces discutió con Margot, y escribió sobre un lazo inesperado que se había desarrollado entre ellas, aunque a quien se sentía más cercana era a su padre. Tiempo más tarde, también comenzó a apreciar la gentileza de Peter van Pels, y hasta llegaron a tener sentimientos románticos. </p>
+                    <p class="descripcion">Ana pasaba la mayor parte de su tiempo leyendo y estudiando, al tiempo que continuaba escribiendo en su diario. Además de narrar los hechos transcurridos, Ana escribía sobre sus sentimientos, creencias y ambiciones, temas de los que no hablaba con los demás. Al sentirse más segura sobre su forma de escribir, al mismo tiempo que crecía y maduraba, trataba temas más abstractos, como sus creencias en Dios, o sobre cómo definía ella la naturaleza humana. Escribió regularmente hasta su anotación final, el 1 de agosto de 1944.</p>
+                
                 </div>
             </div>
         </div>
