--- a/wikipedia-page/index.html
+++ b/wikipedia-page/index.html
@@ -540,6 +540,35 @@
                     
                     <p class="descripcion">La ciudad de Barcelona inauguró, el 13 de febrero de 1998, un espacio público con su nombre en el barrio de Villa de Gràcia, la Plaza de Ana Frank. Además, en 2001, se colocó una estatua realista de bronce en su honor, obra de Sara Pons Arnal. Situada encima del pequeño voladizo de la entrada del Centro Artesano Tradicionarius (CAT), en la misma plaza, Ana Frank queda representada en posición estirada boca abajo y sosteniendo su diario personal, con mirada reflexiva. En la misma fachada, a una distancia cercana pero inferior, como elemento del conjunto, existen dos páginas hechas de bronce que recogen unas palabras de reflexión y reconocimiento de la autora de la estatua, Sara Pons.28​ </p>
                     
+                    <h2 class="subsection">Véase también</h2>
+
+                    <h3 class="subsubsection">Relacionados con el Holocausto y la Segunda Guerra Mundial</h3>
+
+                    <ul style="list-style: initial;">
+                        <li id="enlaces" class="descripcion"> <em> Recordando a Ana Frank </em> — una película documental realizada en 1995 sobre la vida de Ana Frank.</li>
+                        <li id="enlaces" class="descripcion"> Campo de concentración de Auschwitz </li>
+                        <li id="enlaces" class="descripcion"> Campo de concentración de Bergen-Belsen </li>
+                        <li id="enlaces" class="descripcion"> Miep Gies </li>
+                        <li id="enlaces" class="descripcion"> Karl Silberbauer (suboficial de las SS, quien detuvo a Anne Frank y su familia)</li>
+                        <li id="enlaces" class="descripcion"> Corrie ten Boom (superviviente)</li>
+                        <li id="enlaces" class="descripcion"> Etty Hillesum — una mujer judía que también escribió un diario durante la guerra.</li>
+                        <li id="enlaces" class="descripcion"> Rutka Laskier</li>
+                        <li id="enlaces" class="descripcion"> Hanneli Goslar (superviviente)</li>
+                        <li id="enlaces" class="descripcion"> Susanne Ledermann</li>
+                        <li id="enlaces" class="descripcion"> Holocausto </li>
+                        <li id="enlaces" class="descripcion"> Tanya Savicheva — una niña rusa que registró el asesinato de su familia durante un período de seis meses durante el Sitio a Leningrado.</li>
+                    </ul>
+
+                    <h3 class="subsubsection">Otros</h3>
+
+                    <ul style="list-style: initial;">
+                        <li id="enlaces" class="descripcion">En 1992 el artista alemán Wolf Vostell creó un cuadro con el título Homenaje a Ana Frank.29​</li>
+                        <li id="enlaces" class="descripcion">5535 Annefrank — un asteroide nombrado así en su recuerdo.</li>
+                        <li id="enlaces" class="descripcion">Neutral Milk Hotel — banda de folk estadounidense cuyo álbum publicado en 1998, In the Aeroplane Over the Sea, se inspiró en la historia de Ana Frank.</li>
+                        <li id="enlaces" class="descripcion">El árbol de Ana Frank, árbol que describe en su diario.</li>
+                    </ul>
+
+                    <h2 class="subsection">Notas</h2>
                 </div>
             </div>
         </div>
