--- a/wikipedia-page/index.html
+++ b/wikipedia-page/index.html
@@ -544,31 +544,35 @@
 
                     <h3 class="subsubsection">Relacionados con el Holocausto y la Segunda Guerra Mundial</h3>
 
-                    <ul style="list-style: initial;">
-                        <li id="enlaces" class="descripcion"> <em> Recordando a Ana Frank </em> — una película documental realizada en 1995 sobre la vida de Ana Frank.</li>
-                        <li id="enlaces" class="descripcion"> Campo de concentración de Auschwitz </li>
-                        <li id="enlaces" class="descripcion"> Campo de concentración de Bergen-Belsen </li>
-                        <li id="enlaces" class="descripcion"> Miep Gies </li>
-                        <li id="enlaces" class="descripcion"> Karl Silberbauer (suboficial de las SS, quien detuvo a Anne Frank y su familia)</li>
-                        <li id="enlaces" class="descripcion"> Corrie ten Boom (superviviente)</li>
-                        <li id="enlaces" class="descripcion"> Etty Hillesum — una mujer judía que también escribió un diario durante la guerra.</li>
-                        <li id="enlaces" class="descripcion"> Rutka Laskier</li>
-                        <li id="enlaces" class="descripcion"> Hanneli Goslar (superviviente)</li>
-                        <li id="enlaces" class="descripcion"> Susanne Ledermann</li>
-                        <li id="enlaces" class="descripcion"> Holocausto </li>
-                        <li id="enlaces" class="descripcion"> Tanya Savicheva — una niña rusa que registró el asesinato de su familia durante un período de seis meses durante el Sitio a Leningrado.</li>
+                    <ul style="list-style: initial;" class="descripcion">
+                        <li id="item"> <em> Recordando a Ana Frank </em> — una película documental realizada en 1995 sobre la vida de Ana Frank.</li>
+                        <li id="item"> Campo de concentración de Auschwitz </li>
+                        <li id="item"> Campo de concentración de Bergen-Belsen </li>
+                        <li id="item"> Miep Gies </li>
+                        <li id="item"> Karl Silberbauer (suboficial de las SS, quien detuvo a Anne Frank y su familia)</li>
+                        <li id="item"> Corrie ten Boom (superviviente)</li>
+                        <li id="item"> Etty Hillesum — una mujer judía que también escribió un diario durante la guerra.</li>
+                        <li id="item"> Rutka Laskier</li>
+                        <li id="item"> Hanneli Goslar (superviviente)</li>
+                        <li id="item"> Susanne Ledermann</li>
+                        <li id="item"> Holocausto </li>
+                        <li id="item"> Tanya Savicheva — una niña rusa que registró el asesinato de su familia durante un período de seis meses durante el Sitio a Leningrado.</li>
                     </ul>
 
                     <h3 class="subsubsection">Otros</h3>
 
-                    <ul style="list-style: initial;">
-                        <li id="enlaces" class="descripcion">En 1992 el artista alemán Wolf Vostell creó un cuadro con el título Homenaje a Ana Frank.29​</li>
-                        <li id="enlaces" class="descripcion">5535 Annefrank — un asteroide nombrado así en su recuerdo.</li>
-                        <li id="enlaces" class="descripcion">Neutral Milk Hotel — banda de folk estadounidense cuyo álbum publicado en 1998, In the Aeroplane Over the Sea, se inspiró en la historia de Ana Frank.</li>
-                        <li id="enlaces" class="descripcion">El árbol de Ana Frank, árbol que describe en su diario.</li>
+                    <ul style="list-style: initial;" class="descripcion">
+                        <li id="item">En 1992 el artista alemán Wolf Vostell creó un cuadro con el título Homenaje a Ana Frank.29​</li>
+                        <li id="item">5535 Annefrank — un asteroide nombrado así en su recuerdo.</li>
+                        <li id="item">Neutral Milk Hotel — banda de folk estadounidense cuyo álbum publicado en 1998, In the Aeroplane Over the Sea, se inspiró en la historia de Ana Frank.</li>
+                        <li id="item">El árbol de Ana Frank, árbol que describe en su diario.</li>
                     </ul>
 
                     <h2 class="subsection">Notas</h2>
+
+                    <ol class="descripcion">
+                        <li>Una investigación realizada por Anne Frank House en 2015 reveló que Frank podría haber fallecido en febrero de 1945 y no en marzo como asumieron las autoridades neerlandesas durante mucho tiempo.3​</li>
+                    </ol>
                 </div>
             </div>
         </div>
