Change section link report a bug

--- a/wikipedia-page/index.html
+++ b/wikipedia-page/index.html
@@ -23,7 +23,7 @@
                 <li><a href="https://es.wikipedia.org/wiki/Arquidi%C3%B3cesis_de_Sarai">Página aleatoria</a></li>
                 <li><a href="https://es.wikipedia.org/wiki/Ayuda:Contenidos">Ayuda</a></li>
                 <li><a href="https://donate.wikimedia.org/w/index.php?title=Special:LandingPage&country=XX&uselang=es&utm_medium=sidebar&utm_source=donate&utm_campaign=C13_es.wikipedia.org">Donaciones</a></li>
-                <li><a href="https://es.wikipedia.org/wiki/Ayuda:Contenidos">Notificar un error</a></li>
+                <li><a href="#">Notificar un error</a></li>
             
                 <br>
                 <li class="categoria">Herramientas</li>
